# AI-Study

./: .gitignore  .gitmodules  CMakeLists.txt  机器学习.md
MLP/: CMakeLists.txt  README.md
MLP/include/: activation.h  loss.h  mlp.h
MLP/src/: activation.cpp  loss.cpp  mlp.cpp
MLP/tests/: test_backprop.cpp  test_loss.cpp
